--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                 <!-- Tab 2 -->
                 <input type="radio" name="tabset" id="tab2" aria-controls="rauchbier">
                 <label for="tab2">Zenebas Empire</label>
-                <!-- Tab 3 -->
+                <!-- Tab 3
                 <input type="radio" name="tabset" id="tab3" aria-controls="dunkles">
-                <label for="tab3">Dunkles Bock</label>
+                <label for="tab3">Dunkles Bock</label> -->
                 
                 <div class="tab-panels">
                     <!-- Tab 1 -->
@@ -648,10 +648,10 @@
                         </div>
                     </section>
                     <!-- Tab 3 -->
-                    <!--<section id="misc" class="tab-panel">
+                    <!-- <section id="misc" class="tab-panel">
                         <h2>Misc</h2>
                         <p>Nothing here yet</p>
-                    </section>-->
+                    </section> -->
                 </div>
             </div>
         </div>
