--- a/index.html
+++ b/index.html
@@ -430,9 +430,10 @@
                                         </li>
                                         <li><b>sensors: </b></li>
                                         <li><b>Weapons: </b>
-                                            <li><div class="see-more"><span class="system">Retractable Sword</span><span class="decrip">Action: Perform a melee Attack action. This attack deals 2 damage if it hits, and ignores anything that reduces damage (but the attack can still be Evaded).</span></div></li>
-                                        </ul>
-                                    </li>
+                                            <ul>
+                                                <li><div class="see-more"><span class="system">Retractable Sword</span><span class="decrip">Action: Perform a melee Attack action. This attack deals 2 damage if it hits, and ignores anything that reduces damage (but the attack can still be Evaded).</span></div></li>
+                                            </ul>
+                                        </li>
                                         <li><b>Defense: </b>
                                             <ul>
                                                 <li><div class="see-more"><span class="system">Armor Plating</span><span class="decrip">Passive: Any melee attack against you deals 1 less damage. (minimum 1)</span></div></li>
@@ -493,11 +494,12 @@
                                         </li>
                                         <li><b>sensors: </b></li>
                                         <li><b>Weapons: </b>
-                                            <li><div class="see-more"><span class="system">Automatic Cannon</span><span class="decrip">Action: Make two ranged attack Tests, the second one being at Disadvantage. Each attack does 1 damage. If both attacks are successful, the Disadvantaged attack does 2 damage.</span></div></li>
-                                            <li><div class="see-more"><span class="system">BGS</span><span class="decrip">Action: Make a melee attack Test that deals 3 damage.</span></div></li>
-                                            <li><div class="see-more"><span class="system">Retractable Sword</span><span class="decrip">Action: Perform a melee Attack action. This attack deals 2 damage if it hits, and ignores anything that reduces damage (but the attack can still be Evaded).</span></div></li>
-                                        </ul>
-                                    </li>
+                                            <ul>
+                                                <li><div class="see-more"><span class="system">Automatic Cannon</span><span class="decrip">Action: Make two ranged attack Tests, the second one being at Disadvantage. Each attack does 1 damage. If both attacks are successful, the Disadvantaged attack does 2 damage.</span></div></li>
+                                                <li><div class="see-more"><span class="system">BGS</span><span class="decrip">Action: Make a melee attack Test that deals 3 damage.</span></div></li>
+                                                <li><div class="see-more"><span class="system">Retractable Sword</span><span class="decrip">Action: Perform a melee Attack action. This attack deals 2 damage if it hits, and ignores anything that reduces damage (but the attack can still be Evaded).</span></div></li>
+                                            </ul>
+                                        </li>
                                         <li><b>Defense: </b>
                                             <ul>
                                                 <li><div class="see-more"><span class="system">Armor Plating</span><span class="decrip">Passive: Any melee attack against you deals 1 less damage. (minimum 1)</span></div></li>
@@ -505,7 +507,11 @@
                                                 <li><div class="see-more"><span class="system">Multi-phase Shield</span><span class="decrip">Passive: If you are attacked by Ranged attacks, reduce the total damage by 1. (minimum 1)</span></div></li>
                                             </ul>
                                         </li>
-                                        <li><b>Movement: </b>Gravity Engine</li>
+                                        <li><b>Movement: </b>
+                                            <ul>
+                                                <li><div class="see-more"><span class="system">Gravity Engines</span><span class="decrip">Action: Spend 2 Fuel, and then move. You may make a Melee attack with Disadvantage at the end of the move.</span></div></li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </div>
                                 <div>
@@ -600,7 +606,7 @@
                                         </li>
                                         <li><b>Movement: </b>
                                             <ul>
-                                                <li><div class="see-more"><span class="system">Transforming<span Style="color: #900;">*</span></span><span class="decrip">Description</span></div></li>
+                                                <li><div class="see-more"><span class="system">Transforming<span Style="color: #900;">*</span></span><span class="decrip">Work In Progress</span></div></li>
                                                 <li><div class="see-more"><span class="system">Emergency Power</span><span class="decrip">Passive: When you would be reduced to 0 Structure, spend 3 Fuel. You instead are reduced to 3 Structure (effectively repairing 3).</span></div></li>
                                                 <li><div class="see-more"><span class="system">Fuel Tanks</span><span class="decrip">Passive: Permanently increase your mecha’s Fuel by 4.</span></div></li>
                                                 <li><div class="see-more"><span class="system">Gravity Engines</span><span class="decrip">Action: Spend 2 Fuel, and then move. You may make a Melee attack with Disadvantage at the end of the move.</span></div></li>
@@ -1116,9 +1122,9 @@
                                         <li><b>Movement: </b>
                                             <ul>
                                                 <li><div class="see-more"><span class="system">Gravity Engines</span><span class="decrip">Action: Spend 2 Fuel, and then move. You may make a Melee attack with Disadvantage at the end of the move.</span></div></li>
-                                                <li><div class="see-more"><span class="system">syetem</span><span class="decrip">Description</span></div></li>
+                                                <li><div class="see-more"><span class="system">Microfusion Reactor</span><span class="decrip">Action: Deal 2 damage to every enemy in the encounter and 1 damage to your Mecha and every friendly. Any non-reinforced buildings within 1 kilometer of your Mecha are leveled or catch fire. Using this action disables this system for the rest of the mission.</span></div></li>
                                             </ul>
-                                        Microfusion Reactor</li>
+                                        </li>
                                     </ul>
                                 </div>
                                 <div>
