--- a/index.html
+++ b/index.html
@@ -199,7 +199,13 @@
 
             /* RESPONSIVE */
             @media only screen and (max-width: 800px) {
-                
+                .three-column div {
+                    width: 100%;
+                    min-width: initial;
+                }
+                ul {
+                    padding-left: 15px;
+                }
             }
         </style>
     </head>
