--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
         </style>
     </head>
     <body>
+<a href="/zoids">Zoids</a>
         <div class="main-container">
             <h1>Tiny Zoids</h1>
             <div class="tabset">
