--- a/zoids.html
+++ b/zoids.html
@@ -946,7 +946,7 @@
                                     </ul>
                                 </div>
                                 <div>
-                                    <h3>Killerdome</h3>
+                                    <h3>Sea Panther</h3>
                                     <ul>
                                         <li><b>Strcture: </b>6</li>
                                         <li><b>Fuel: </b>6</li>
@@ -1031,7 +1031,7 @@
                             <label class="tab-label" for="chck2-3">Advanced</label>
                             <div class="tab-content flex-container three-column">
                                 <div>
-                                    <h3>Dark Spiner</h3>
+                                    <h3></h3>Dimetrodon</h3>
                                     <ul>
                                         <li><b>Strcture: </b>8</li>
                                         <li><b>Fuel: </b>8</li>
